--- a/src/views/home.html
+++ b/src/views/home.html
@@ -675,52 +675,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
         integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
         crossorigin="anonymous"></script>
-    <script>
-        let user; // Declaração da variável user como global
-
-        fetch("/auth/profile", { method: "get" })
-            .then(response => response.text())
-            .then(data => {
-                user = JSON.parse(data);
-                const ids = ["boasvindas1", "boasvindas2"];
-
-                ids.forEach(id => {
-                    const element = document.getElementById(id);
-                    if (element) {
-                        element.innerText = `${user.username}`;
-                    }
-                });
-
-                const infoUser = {
-                    idUser: user.idUser
-                };
-
-                return fetch("/api/accounts/getAccount", {
-                    method: "post",
-                    headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify(infoUser)
-                });
-            })
-            .then(response => response.text())
-            .then(data => {
-                console.log(data)
-                const account = JSON.parse(data);
-                console.log(account[0])
-                console.log(account[0].current_balance)
-                const ids = ["saldo1", "saldo2"];
-
-                ids.forEach(id => {
-                    const element = document.getElementById(id);
-                    if (element) {
-                        element.innerText = `R$${account[account.length - 1].current_balance}`;
-                    }
-                });
-            })
-            .catch(error => {
-                console.log("Ocorreu um erro:", error);
-            });
-
-    </script>
+    <script src="js/home.js"></script>
 
 </body>
 
