--- a/src/views/home.html
+++ b/src/views/home.html
@@ -100,7 +100,7 @@
                     <span class="display-3 fs-4 m-2">Receita mensal</span>
                     <button class="botao">
                         <i class='bx bx-plus-circle fs-1 text-success' data-bs-toggle="modal"
-                            data-bs-target="#add_receita_despesa" onclick="dispararModal('receita')"></i>
+                            data-bs-target="#add_receita"></i>
                     </button>
                     <h3 class="text-success" id="receitaMensal">R$0</h3>
                 </div>
@@ -114,7 +114,7 @@
                     <span class="display-3 fs-4 m-2">Despesa mensal</span>
                     <button class="botao">
                         <i class='bx bx-minus-circle fs-1 text-danger' data-bs-toggle="modal"
-                            data-bs-target="#add_receita_despesa" onclick="dispararModal('despesa')"></i>
+                            data-bs-target="#add_despesa"></i>
                     </button>
                     <h3 class="text-danger" id="despesaMensal">R$0</h3>
                 </div>
@@ -463,14 +463,14 @@
             </div>
             <!-- ==== FIM TERCEIRA ROW ===== -->
 
-            <!-- ===== MODAL RECEITA/DESPESA ===== -->
-            <div class="modal fade" id="add_receita_despesa" tabindex="-1" aria-labelledby="addReceita/Despesa"
+            <!-- ===== MODAL RECEITA ===== -->
+            <div class="modal fade" id="add_receita" tabindex="-1" aria-labelledby="addReceita"
                 aria-hidden="true">
                 <div class="modal-dialog" style="width: 100%;">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="tituloModal"></h5>
-                            <i id="iconModal"></i>
+                            <h5 class="modal-title" id="tituloModal">Nova Receita</h5>
+                            <i id="iconModal" class="bx bx-dollar-circle fs-1 text-success mx-2"></i>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
@@ -509,7 +509,7 @@
                                     <textarea class="form-control" id="mensagem" rows="3"></textarea>
                                 </div>
 
-                                <div class="form-group">
+                                <!-- <div class="form-group">
                                     <div class="row my-3 botao-repetir" onclick="repetir()">
                                         <div class="col-1">
                                             <i class='bx bx-repeat repetir'></i>
@@ -553,7 +553,7 @@
                                             value="option2">receita fixa
                                         <label class="form-check-label" for="radio2"></label>
                                     </div>
-                                </div>
+                                </div> -->
 
                                 <div class="d-flex justify-content-center">
                                     <button class="my-5" id="botao-salvar" style="border: none;">
@@ -566,7 +566,112 @@
                     </div>
                 </div>
             </div>
-            <!-- ===== FIM DO MODAL RECEITA/DESPESA ===== -->
+            <!-- ===== FIM DO MODAL RECEITA ===== -->
+
+            <!-- ===== MODAL DESPESA ===== -->
+            <div class="modal fade" id="add_despesa" tabindex="-1" aria-labelledby="despesa"
+                aria-hidden="true">
+                <div class="modal-dialog" style="width: 100%;">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="tituloModal">Nova despesa</h5>
+                            <i id="iconModal" class="bx bxs-dollar-circle fs-1 text-danger mx-2"></i>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <form>
+                                <!-- caixas de texto -->
+                                <div class="form-group">
+                                    <label for="usuario">Descrição</label>
+                                    <input class="form-control" type="text" id="descricao">
+                                </div>
+
+                                <div class="row my-3">
+                                    <div class="col-4">
+                                        <div class="form-group">
+                                            <label for="usuario">Valor</label>
+                                            <input class="form-control" type="text" id="valor">
+                                        </div>
+                                    </div>
+                                    <div class="col-4">
+                                        <div class="form-group">
+                                            <label for="usuario">Data</label>
+                                            <input class="form-control" type="date" id="date">
+                                        </div>
+                                    </div>
+                                    <div class="col-4">
+                                        <div class="form-group">
+                                            <label for="estados">Categoria</label>
+                                            <select class="form-control" id="categorias">
+                                                
+                                            </select>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- textarea -->
+                                <div class="form-group">
+                                    <label for="mensagem">Observação (opcional)</label>
+                                    <textarea class="form-control" id="mensagem" rows="3"></textarea>
+                                </div>
+
+                                <!-- <div class="form-group">
+                                    <div class="row my-3 botao-repetir" onclick="repetir()">
+                                        <div class="col-1">
+                                            <i class='bx bx-repeat repetir'></i>
+                                        </div>
+                                        <div class="col d-flex align-items-center">
+                                            <span class="fs-6 fw-light" style="color: green">repetir</span>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="form-group mx-3 d-none" id="opcoes_repeticao">
+                                    <div class="form-check">
+                                        <div class="row">
+                                            <div class="col-4">
+                                                <input type="radio" class="form-check-input" id="radio1" name="optradio"
+                                                    value="option1" checked>parcelado em:
+
+                                            </div>
+                                            <div class="col-3">
+                                                <select class="form-control" id="valor">
+                                                    <option></option>
+                                                    <option></option>
+                                                    <option></option>
+                                                    <option>...</option>
+                                                </select>
+                                            </div>
+                                            <div class="col-5">
+                                                <select class="form-control" id="escala">
+                                                    <option></option>
+                                                    <option></option>
+                                                    <option></option>
+                                                    <option>...</option>
+                                                </select>
+                                            </div>
+
+                                        </div>
+                                        <label class="form-check-label" for="radio1"></label>
+                                    </div>
+                                    <div class="form-check">
+                                        <input type="radio" class="form-check-input" id="radio2" name="optradio"
+                                            value="option2">receita fixa
+                                        <label class="form-check-label" for="radio2"></label>
+                                    </div>
+                                </div> -->
+
+                                <div class="d-flex justify-content-center">
+                                    <button class="my-5" id="botao-salvar" style="border: none;">
+                                        <i class='bx bx-check salvar'></i>
+                                    </button>
+                                </div>
+
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- ===== FIM DO MODAL DESPESA ===== -->
 
             <!-- MODAL NOVO CARTÃO -->
 
